Add UROOT_INITRAMFS location to nightly.yml
Signed-off-by: Paul Zhang <paulz@ucla.edu>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -52,6 +52,7 @@ jobs:
       # qemu binary and kernel for integration test
       UROOT_QEMU: qemu-system-x86_64
       UROOT_KERNEL: ${{ github.workspace }}/src/github.com/${{ github.repository }}/bzImage
+      UROOT_INITRAMFS: /tmp/initramfs.linux_amd64.cpio
     # Set the working directory to the correct place in $GOPATH.
     defaults:
       run:
